--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /**
  * Theme Name: Kantan Theme
- * Theme URI: https://github.com/xama5/kantan
+ * Theme URI: https://github.com/wp-kantan/kantan
  * Description: Minimal, yet powerful WordPress theme
  * Version: 1.0
  * Author: xama5
@@ -13,6 +13,6 @@
  /*
 
     ATTENTION: Do not modify this file, it will NOT be loaded.
-    Instead, edit theme files in /Theme
+    Instead, edit /Assets
 
  */
