Add kantan plugins and GitHub Updater support

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /**
  * Theme Name: Kantan Theme
  * Theme URI: https://github.com/wp-kantan/kantan
+ * GitHub Theme URI: wp-kantan/kantan
  * Description: Minimal, yet powerful WordPress theme
  * Version: 1.0
  * Author: xama5
