Disable theme update and updare author

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 /**
  * Theme Name: Kantan Theme
  * Theme URI: https://github.com/wp-kantan/kantan
- * GitHub Theme URI: wp-kantan/kantan
  * Description: Minimal, yet powerful WordPress theme
  * Version: 1.0
- * Author: xama5
- * Author URI: https://github.com/xama5
+ * Author: oliver-la
+ * Author URI: https://github.com/oliver-la
  * Text Domain: kantan
  * Domain Path: /Locales
  * License: MIT
