--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  * Description: Minimal, yet powerful WordPress theme
  * Version: 1.0
  * Author: oliver-la
- * Author URI: https://github.com/oliver-la
+ * Author URI: https://www.oliver.la
  * Text Domain: kantan
  * Domain Path: /lang
  * License: MIT
